add_subdirectory(arrays_intersection)
add_subdirectory(arrays_intersection_2)
add_subdirectory(contains_duplicate)
add_subdirectory(disappeared_numbers)
add_subdirectory(find_all_duplicates)
add_subdirectory(gas_station)
add_subdirectory(max_consecutive_ones)
add_subdirectory(max_subarray)
add_subdirectory(missing_number)
add_subdirectory(move_zeroes)
add_subdirectory(product_except_self)
add_subdirectory(remove_duplicates)
add_subdirectory(search_insert_position)
add_subdirectory(sort_colors)
add_subdirectory(third_maximum_number)
